--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -111,13 +111,18 @@
                 align-items: center;
                 justify-content: center;
                 height: max-content;
-                margin: 0.5rem;
+                margin: 1rem;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
                     font-size: 2rem;
                     text-transform: uppercase;
                     color: #252934;
+                }
+                .section-title-underline {
+                    background: #252934;
+                    height: 4px;
+                    width: 70px;
                 }
             }
             .about-content-container-no-title {
@@ -250,12 +255,7 @@
     }
     .Projects {
         position: relative;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        height: max-content;
+
         @media all and (min-width: 768px) {
             padding-left: 1rem;
             padding-right: 1rem;
@@ -271,20 +271,24 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
             .SectionTitleGrouping {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
                 height: max-content;
-                margin: 0.5rem;
+                margin: 1rem;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
                     font-size: 2rem;
                     text-transform: uppercase;
                     color: #252934;
+                }
+                .section-title-underline {
+                    background: #252934;
+                    height: 4px;
+                    width: 70px;
                 }
             }
             .project-card-container {
