--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -255,22 +255,19 @@
     }
     .Projects {
         position: relative;
-
+        height: 100vh;
         @media all and (min-width: 768px) {
             padding-left: 1rem;
             padding-right: 1rem;
         }
         @media all and (min-width: 1024px) {
             grid-area: projects;
-            height: 100%;
         }
         .projects-container {
             position: relative;
-            width: 100%;
-            height: inherit;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            height: 100vh;
             .SectionTitleGrouping {
                 display: flex;
                 flex-direction: column;
