--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -126,6 +126,7 @@
                 }
             }
             .about-content-container-no-title {
+
                 max-width: 400px;
                 @media all and (min-width: 768px) {
                     border: 2.5px dashed #ccc;
@@ -293,6 +294,7 @@
                 display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
                 width: 100%;
+                margin-top: 1rem;
                 overflow-y: scroll;
                 @media all and (max-width: 768px) {
                     max-width: 400px;
