--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -148,23 +148,12 @@
 }
 
 .App .About .about-container .SectionTitleGrouping {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: inline-block;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   margin: 1rem;
+  border: solid;
 }
 
 .App .About .about-container .SectionTitleGrouping .section-title {
@@ -411,23 +400,12 @@
 }
 
 .App .Projects .projects-container .SectionTitleGrouping {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: inline-block;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   margin: 1rem;
+  border: solid;
 }
 
 .App .Projects .projects-container .SectionTitleGrouping .section-title {
