--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -106,12 +106,10 @@
         }
         .about-container {
             .SectionTitleGrouping {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
+                display: inline-block;
                 height: max-content;
                 margin: 1rem;
+                border: solid;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
@@ -126,7 +124,6 @@
                 }
             }
             .about-content-container-no-title {
-
                 max-width: 400px;
                 @media all and (min-width: 768px) {
                     border: 2.5px dashed #ccc;
@@ -270,12 +267,10 @@
             flex-direction: column;
             height: 100vh;
             .SectionTitleGrouping {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
+                display: inline-block;
                 height: max-content;
                 margin: 1rem;
+                border: solid;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
