--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -161,27 +161,15 @@
 }
 
 .App .About .about-container .SectionTitleGrouping {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: inline-block;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  width: 100%;
   margin: 1rem;
 }
 
 .App .About .about-container .SectionTitleGrouping .section-title {
-  font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
   text-transform: uppercase;
@@ -189,10 +177,13 @@
 }
 
 .App .About .about-container .SectionTitleGrouping .section-title-underline {
-  display: inline-block;
   background: #252934;
   height: 3px;
   width: 70px;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .App .About .about-container .about-content-container-no-title {
@@ -421,31 +412,22 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100vh;
 }
 
 .App .Projects .projects-container .SectionTitleGrouping {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: inline-block;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  width: 100%;
   margin: 1rem;
 }
 
 .App .Projects .projects-container .SectionTitleGrouping .section-title {
-  font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
   text-transform: uppercase;
@@ -453,10 +435,13 @@
 }
 
 .App .Projects .projects-container .SectionTitleGrouping .section-title-underline {
-  display: inline-block;
   background: #252934;
   height: 3px;
   width: 70px;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .App .Projects .projects-container .project-card-container {
