--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -27,14 +27,15 @@
     }
     @media all and (min-width: 1024px) {
         display: grid;
-        grid:  100vh 100vh / 30% 70%;
+        grid:  100vh 80vh 20vh / 30% 70%;
         grid-template-areas: 
             "intro intro"
-            "about projects";
+            "about projects"
+            "contact projects";
     }
     @media all and (min-width: 1366px) {
         display: grid;
-        grid:  100vh 90vh 10vh / 25% 75%;
+        grid:  100vh 80vh 20vh / 25% 75%;
         grid-template-areas: 
             "intro intro"
             "about projects"
@@ -97,7 +98,6 @@
         flex-direction: column;
         align-items: center;
         height: max-content;
-        overflow: hidden;
         padding-left: 1rem;
         padding-right: 1rem;
         @media all and (min-width: 1024px) {
@@ -107,7 +107,7 @@
         .about-container {
             display: flex;
             flex-direction: column;
-            align-items: center;;
+            align-items: center;
             .SectionTitleGrouping {
                 display: inline-block;
                 height: max-content;
@@ -134,7 +134,7 @@
                     border: 2.5px dashed #ccc;
                     border-radius: 12px;
                     padding: 1rem;
-                    overflow: hidden;
+                    overflow-x: hidden;
                 }
                 .profile-picture-contents-intro-container {
                     position: relative;
@@ -240,6 +240,7 @@
                         justify-content: space-between;
                         padding-top: 1rem;
                         padding-bottom: 1rem;
+                        cursor: pointer;
                         .swipe-card-image {
                             background-size: contain;
                             background-repeat: no-repeat;
@@ -272,6 +273,7 @@
             flex-direction: column;
             align-items: center;
             height: 100vh;
+            padding-bottom: 3rem;
             .SectionTitleGrouping {
                 display: inline-block;
                 height: max-content;
@@ -297,13 +299,16 @@
                 display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
                 width: 100%;
-                overflow-y: scroll;
+                
                 @media all and (max-width: 768px) {
                     max-width: 400px;
                 }
                 @media all and (min-width: 768px) {
                     border: 2.5px dashed #ccc;
                     border-radius: 12px;
+                }
+                @media all and (min-width: 1024px) {
+                    overflow-y: scroll;
                 }
                 .project-card-page-2 {
                     position: relative;
@@ -455,22 +460,27 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        display: none;
-        @media all and (min-width: 1025px) {
-            display: flex;
-            grid-area: contact;
-            align-self: end;
-        }
-        .SectionTitleGrouping {
+        display: none;;
+        @media all and (min-width: 1024px) {
+            position: relative;
             display: flex;
             flex-direction: column;
+            justify-content: flex-end;
             align-items: center;
-            padding: 1rem;
+            width: 100%;
+            grid-area: contact;
+            height: 100%;
+            padding-bottom: 3rem;
+        }
+        .SectionTitleGrouping {
+            display: inline-block;
+            height: max-content;
+            width: 100%;
+            margin: 1rem;
             @media all and (min-width: 1024px) {
                 display: none;
             }
             .section-title {
-                font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
@@ -478,18 +488,25 @@
             }
             .section-title-underline {
                 background: #252934;
-                height: 4px;
+                height: 3px;
                 width: 70px;
+                position: relative;
+                left: 50%;
+                transform: translateX(-50%)
             }
         }
         .social-icons-container {
             display: inline-flex;
             justify-content: space-evenly;
-            width: 55%;
+            width: fit-content;
+            height: fit-content;
             border-radius: 12px;
-            padding: 1rem;
-            margin-bottom: 15px;
-            background-color: #252934;
+            padding: 0.5rem;
+            border: 2.5px dashed #ccc;
+            border-radius: 12px;
+            .social-icons {
+                margin: 0.5rem;
+            }
         }
     }   
 }
