--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -112,7 +112,8 @@
                 display: inline-block;
                 height: max-content;
                 width: 100%;
-                margin: 1rem;
+                margin-bottom: 1rem;
+                margin-top: 0.2rem;
                 .section-title {
                     font-weight: 600;
                     font-size: 2rem;
@@ -273,12 +274,13 @@
             flex-direction: column;
             align-items: center;
             height: 100vh;
-            padding-bottom: 3rem;
+            padding-bottom: 1rem;
             .SectionTitleGrouping {
                 display: inline-block;
                 height: max-content;
                 width: 100%;
-                margin: 1rem;
+                margin-bottom: 1rem;
+                margin-top: 0.2rem;
                 .section-title {
                     font-weight: 600;
                     font-size: 2rem;
@@ -470,7 +472,7 @@
             width: 100%;
             grid-area: contact;
             height: 100%;
-            padding-bottom: 3rem;
+            padding-bottom: 1rem;
         }
         .SectionTitleGrouping {
             display: inline-block;
