--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -76,45 +76,26 @@
         width: 100%;
         .container-about-projects-contact {
             position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             width: 100%;
-            @media all and (min-width: 1024px) and (max-width: 1366px) {
-                height: 100vh;
-                display: grid;
-                grid:  auto auto / 30% 70%;
-                grid-template-areas: 
-                    "about projects"
-                    "contact projects";
-            }
-            @media all and (min-width: 1366px) {
-                height: 100vh;
-                display: grid;
-                grid: minmax(auto, 85vh) minmax(auto, 15vh) / minmax(auto, 350px) minmax(auto, 1200px);
-                grid-template-areas: 
-                    "about projects"
-                    "contact projects";
-            }
-            @media all and (min-width: 1920px) {
-                height: auto;
-                max-height: 100vh;
-                display: grid;
-                grid: auto auto / minmax(auto, 350px) minmax(auto, 1200px);
-                grid-template-areas: 
-                    "about projects"
-                    "contact projects";
+            @media all and (min-width: 1024px) {
+                display: flex;
+                flex-direction: row;
             }
             .About {
                 position: relative;
-                width: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: max-content;
-                overflow: hidden;
-                padding-left: 1rem;
-                padding-right: 1rem;
-                @media all and (min-width: 1024px) {
-                    grid-area: about;
-                    height: fit-content;
+                max-width: 400px;
+                height: fit-content;
+                padding: 0 1rem 0 1rem;
+                @media all and (min-width: 769px) { 
+                    height: 100vh;
+                    max-width: 350px;
                 }
                 .about-container {
                     display: flex;
@@ -141,12 +122,16 @@
                         }
                     }
                     .about-content-container-no-title {
+                        display: flex;
+                        flex-direction: column;
                         max-width: 400px;
-                        @media all and (min-width: 768px) {
+                        height: 100%;
+                        @media all and (min-width: 400px) {
                             border: 2.5px dashed #ccc;
                             border-radius: 12px;
                             padding: 1rem;
                             overflow: hidden;
+                            justify-content: space-between;
                         }
                         .profile-picture-contents-intro-container {
                             position: relative;
@@ -233,10 +218,10 @@
                             align-items: center;
                             height: 275px;
                             width: 100%;
-                            padding-top: 3.5rem;
+                            margin: 1rem 0 0 0;
                             @media all and (min-width: 1024px) {
-                                height: 220px;
-                                margin-top: 1.5rem;
+                                height: 210px;
+                                margin: 2.5rem 0 0.2rem 0;
                             }
                             .swipe-card {
                                 position: relative;
@@ -266,31 +251,53 @@
                                 }
                             }
                         }
+                        .Contact {
+                            position: relative;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            width: 100%;
+                            @media all and (max-width: 399px) { 
+                                display: none;
+                            }
+                            .social-icons-container {
+                                display: inline-flex;
+                                justify-content: space-evenly;
+                                width: fit-content;
+                                height: fit-content;
+                                border-radius: 12px;
+                                padding: 0.5rem;
+                                border: 2.5px dashed #ccc;
+                                border-radius: 12px;
+                                background-color: white;
+                                .social-icons {
+                                    margin: 0.5rem;
+                                    cursor: pointer;
+                                }
+                            }
+                        } 
                     }
                 }
             }
             .Projects {
                 position: relative;
                 height: max-content;
-                @media all and (min-width: 768px) {
+                width: 100%;
+                @media all and (min-width: 400px) {
                     padding-left: 1rem;
                     padding-right: 1rem;
-                }
-                @media all and (min-width: 1024px) {
-                    grid-area: projects;
-                    height: auto;
-                    max-height: 100vh;
+                    height: 100vh;
+                    max-width: 1200px;
                 }
                 .projects-container {
                     position: relative;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    height: auto;
-                    
                     padding-bottom: 1rem;
                     @media all and (min-width: 769px) {
-                        max-height: 100vh;
+                        height: 100vh;
                     }
                     .SectionTitleGrouping {
                         display: inline-block;
@@ -317,10 +324,10 @@
                         display: grid;
                         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
                         width: 100%;
-                        @media all and (max-width: 768px) {
+                        @media all and (max-width: 400px) {
                             max-width: 400px;
                         }
-                        @media all and (min-width: 768px) {
+                        @media all and (min-width: 400px) {
                             border: 2.5px dashed #ccc;
                             border-radius: 12px;
                             height: auto;
@@ -477,41 +484,13 @@
                 position: relative;
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
                 align-items: center;
-                display: none;
-                @media all and (min-width: 1024px) {
-                    position: relative;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    align-items: center;
-                    width: 100%;
-                    grid-area: contact;
-                    padding-bottom: 1rem;
-                }
-                .SectionTitleGrouping {
-                    display: inline-block;
-                    height: max-content;
-                    width: 100%;
-                    margin: 1rem;
-                    @media all and (min-width: 1024px) {
-                        display: none;
-                    }
-                    .section-title {
-                        font-weight: 600;
-                        font-size: 2rem;
-                        text-transform: uppercase;
-                        color: #252934;
-                    }
-                    .section-title-underline {
-                        background: #252934;
-                        height: 3px;
-                        width: 70px;
-                        position: relative;
-                        left: 50%;
-                        transform: translateX(-50%)
-                    }
-                }
+                width: 100%;
+                margin-bottom: 1rem;
+                @media all and (min-width: 400px) {
+                    display: none;
+                }  
                 .social-icons-container {
                     display: inline-flex;
                     justify-content: space-evenly;
@@ -521,11 +500,13 @@
                     padding: 0.5rem;
                     border: 2.5px dashed #ccc;
                     border-radius: 12px;
+                    background-color: white;
                     .social-icons {
                         margin: 0.5rem;
+                        cursor: pointer;
                     }
                 }
-            }   
+            } 
         }
     }
 }
