hidden overflow x on mobile

--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -145,6 +145,7 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  overflow-x: hidden;
   padding: 0 1rem 0 1rem;
 }
 
