--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -152,7 +152,7 @@
 @media all and (min-width: 769px) {
   .App .desktop-page .container-about-projects-contact .About {
     height: 100vh;
-    max-width: 350px;
+    max-width: 450px;
   }
 }
 
@@ -364,7 +364,7 @@
   .App .desktop-page .container-about-projects-contact .About .about-container .about-content-container-no-title .technology-cards-container {
     height: 210px;
     padding-top: 1rem;
-    margin: 1rem 0 0 0;
+    margin: 2rem 0 1rem 0;
   }
 }
 
@@ -470,7 +470,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     height: 100vh;
-    max-width: 1200px;
+    max-width: 1100px;
   }
 }
 
