--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -96,7 +96,7 @@
                 padding: 0 1rem 0 1rem;
                 @media all and (min-width: 769px) { 
                     height: 100vh;
-                    max-width: 350px;
+                    max-width: 450px;
                 }
                 .about-container {
                     display: flex;
@@ -224,7 +224,7 @@
                             @media all and (min-width: 1024px) {
                                 height: 210px;
                                 padding-top: 1rem;
-                                margin: 1rem 0 0 0;
+                                margin: 2rem 0 1rem 0;
                             }
                             .swipe-card {
                                 position: relative;
@@ -291,7 +291,7 @@
                     padding-left: 1rem;
                     padding-right: 1rem;
                     height: 100vh;
-                    max-width: 1200px;
+                    max-width: 1100px;
                 }
                 .projects-container {
                     position: relative;
