responsive design changes

--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -212,6 +212,7 @@
     border: 2.5px dashed #ccc;
     border-radius: 12px;
     padding: 1rem;
+    margin-bottom: 1rem;
     overflow: hidden;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
