--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -131,6 +131,7 @@
                             border: 2.5px dashed #ccc;
                             border-radius: 12px;
                             padding: 1rem;
+                            margin-bottom: 1rem;
                             overflow: hidden;
                             justify-content: space-between;
                         }
