--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -531,17 +531,10 @@
           justify-content: flex-end;
 }
 
-.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front .project-languages {
-  font-size: 0.8rem;
-  font-weight: 500;
-  color: #F24E4E;
-  height: 8%;
-}
-
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
   color: #252934;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
   width: 100%;
@@ -554,7 +547,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 8%;
+  padding: 0.4rem;
+  border-top: 2.5px dashed #ccc;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front .project-image-front {
@@ -572,7 +566,6 @@
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front .learn-more-button-container {
   position: relative;
-  height: 16%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -582,13 +575,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 0.4rem;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-front .learn-more-button-container .learn-more-button {
-  color: white;
-  background-color: #f24e4e;
+  color: #252934;
+  background-color: #white;
+  border: 2.5px dashed #ccc;
   font-weight: 500;
-  border-radius: 1.625rem;
+  text-transform: upper;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -598,11 +593,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80%;
-  padding-top: 0.15rem;
-  padding-bottom: 0.15rem;
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
+  padding: 0.3rem 1rem 0.3rem 1rem;
   cursor: pointer;
 }
 
@@ -633,8 +624,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  border-bottom: 2.5px dashed #ccc;
-  padding: 1rem;
+  margin-top: 0.5rem;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .flip-back-button-container {
@@ -659,6 +649,15 @@
   padding: 0.2rem;
   font-size: 2.2rem;
   cursor: pointer;
+}
+
+.App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-languages {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #F24E4E;
+  height: 8%;
+  padding-bottom: 0.5rem;
+  border-bottom: 2.5px dashed #ccc;
 }
 
 .App .desktop-page .container-about-projects-contact .Projects .projects-container .project-card-container .project-card-page-2 .projects-container-back .project-information-container {
