--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -319,23 +319,18 @@
                                 position: absolute;
                                 align-items: center;
                                 justify-content: flex-end;
-                                .project-languages {
-                                    font-size: 0.8rem;
-                                    font-weight: 500;
-                                    color: #F24E4E;
-                                    height: 8%;
-                                }   
                                 .project-title-front {
                                     position: relative;
                                     color: #252934;
-                                    font-size: fontSize(projectTitleFront);
-                                    font-weight: fontWeight(projectTitleFront);
+                                    font-size: 1rem;
+                                    font-weight: 600;
                                     text-transform: uppercase;
                                     width: 100%;
                                     display: flex;
                                     justify-content: center;
                                     align-items: center;
-                                    height: 8%;
+                                    padding: 0.4rem;
+                                    border-top: 2.5px dashed #ccc;
                                 }
                                 .project-image-front {
                                     position: relative;
@@ -350,23 +345,20 @@
                                 }
                                 .learn-more-button-container {
                                     position: relative;
-                                    height: 16%;
                                     display: flex;
                                     justify-content: center;
                                     align-items: center;
+                                    padding-bottom: 0.4rem;
                                     .learn-more-button {
-                                        color: white;
-                                        background-color: #f24e4e;
+                                        color: #252934;
+                                        background-color: #white;
+                                        border: 2.5px dashed #ccc;
                                         font-weight: 500;
-                                        border-radius: 1.625rem;
+                                        text-transform: upper;
                                         display: flex;
                                         justify-content: center;
                                         align-items: center;
-                                        height: 80%;
-                                        padding-top: 0.15rem;
-                                        padding-bottom: 0.15rem;
-                                        padding-left: 0.8rem;
-                                        padding-right: 0.8rem;
+                                        padding: 0.3rem 1rem 0.3rem 1rem;
                                         cursor: pointer;
                                     }
                                 }
@@ -385,8 +377,7 @@
                                     justify-content: center;
                                     align-items: center;
                                     width: 100%;
-                                    border-bottom: 2.5px dashed #ccc;
-                                    padding: 1rem;
+                                    margin-top: 0.5rem;
                                 }
                                 .flip-back-button-container {
                                     position: relative;
@@ -404,6 +395,14 @@
                                         cursor: pointer;
                                     }
                                 }
+                                .project-languages {
+                                    font-size: 0.8rem;
+                                    font-weight: 500;
+                                    color: #F24E4E;
+                                    height: 8%;
+                                    padding-bottom: 0.5rem;
+                                    border-bottom: 2.5px dashed #ccc;
+                                }   
                                 .project-information-container {
                                     overflow-y: scroll;
                                     padding-top: 1rem;
