--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -127,9 +127,9 @@
                         flex-direction: column;
                         max-width: 400px;
                         height: 100%;
-                        @media all and (min-width: 400px) {
-                            border: 2.5px dashed #ccc;
-                            border-radius: 12px;
+                        @media all and (min-width: 415px) {
+                            border-radius: 6px;
+                            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
                             padding: 1rem;
                             margin-bottom: 1rem;
                             overflow: hidden;
@@ -151,7 +151,7 @@
                                 .profile-picture {
                                     width: 100%;
                                     border-radius: 50%;
-                                    box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+                                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
                                 }
                             }
                             .profile-paragraph-container {
@@ -162,8 +162,8 @@
                                 text-align: left;
                                 padding: 3.73%;
                                 transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-                                border-radius: 12px;
-                                box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+                                border-radius: 6px;
+                                border: 2.5px dashed #ccc;
                                 .quotation-marks {
                                     white-space: nowrap;
                                     color: #f24e4e;
@@ -189,8 +189,6 @@
                                 position: relative;
                                 background-color: #ffffff;
                                 position: absolute;
-                                height: 190px;
-                                width: 128.25px;
                                 border-radius: 12px;
                                 box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
                                 display: flex;
@@ -199,6 +197,12 @@
                                 justify-content: space-between;
                                 padding-top: 1rem;
                                 padding-bottom: 1rem;
+                                height: 220px;
+                                width: 148.5px;
+                                @media all and (min-width: 1024px) {
+                                    height: 190px;
+                                    width: 128.25px;
+                                }
                                 cursor: pointer;
                                 .swipe-card-image {
                                     background-size: contain;
@@ -290,8 +294,7 @@
                             max-width: 400px;
                         }
                         @media all and (min-width: 400px) {
-                            border: 2.5px dashed #ccc;
-                            border-radius: 12px;
+
                             height: auto;
                         }
                         @media all and (min-width: 1024px) {
@@ -312,7 +315,7 @@
                                 height: 240px;
                                 width: 90%;
                                 max-width: 350px;
-                                border-radius: 12px;
+                                border-radius: 6px;
                                 box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
                             }
                             .projects-container-front {
@@ -460,7 +463,7 @@
                     border-radius: 12px;
                     padding: 0.5rem;
                     border: 2.5px dashed #ccc;
-                    border-radius: 12px;
+                    border-radius: 6px;
                     background-color: white;
                     .social-icons {
                         margin: 0.5rem;
