--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -97,6 +97,11 @@
                 ::-webkit-scrollbar {
                     display: none;
                 }
+                @media all and (min-width: 1024px) {
+                    min-height: 100vh;
+                    min-width: 350px;
+                    max-width: 350px;   
+                }
                 @media all and (min-width: 1025px) { 
                     height: 100vh;
                     min-width: 450px;
